# next-djchat

./: .gitignore  LICENSE  README.md  TODO.md  main.py  pyproject.toml
djchat/: db.sqlite3  test_websocket.py
djchat/chatapi/: admin.py  consumers.py  crypto.py  models.py  routing.py  serializers.py  urls.py  views.py
djchat/djchat/: asgi.py  settings.py  urls.py
front/nextchat/: .env.local.example  .env.production  WEBSOCKET_USAGE.md  package-lock.json  package.json
front/nextchat/app/: layout.tsx  page.tsx
front/nextchat/app/chat/: layout.tsx  page.tsx
front/nextchat/app/components/: ChatMain.tsx  WebSocketStatus.tsx
front/nextchat/app/components/chat/: ChatAddRoom.tsx  ChatFileUpload.tsx  ChatMessageSender.tsx  ChatMessages.tsx  ChatRoomManager.tsx
front/nextchat/app/context/: AuthContext.tsx  WebSocketContext.tsx
front/nextchat/app/login/: page.tsx
front/nextchat/app/register/: page.tsx
nginx/: README.md  docker-compose.yml
nginx/etc_nginx/: nginx.conf
nginx/etc_nginx/conf.d/: default.conf
nginx/websocket_https_configs/: default  readme.txt
valkey/: docker-compose.yml
